# litesvm-doc

./: README.md
p01-getting-started/: Cargo.toml  note
p01-getting-started/tests/: create_account.rs  transfer_test.rs
p02-test-your-program/: note
p02-test-your-program/sample/: Anchor.toml
p02-test-your-program/sample/programs/sample/: Cargo.toml
p02-test-your-program/sample/programs/sample/src/: lib.rs
p02-test-your-program/sample/programs/sample/tests/: deploy_from_bytes.rs  deploy_from_file.rs  program_test.rs
p03-examples/anchor-crud-litesvm/: Anchor.toml  Cargo.toml  README.md  note
p03-examples/anchor-crud-litesvm/programs/crud/: Cargo.toml
p03-examples/anchor-crud-litesvm/programs/crud/src/: lib.rs
p03-examples/anchor-crud-litesvm/tests/: litesvm-tests.rs
p03-examples/anchor-escrow-with-litesvm/: Anchor.toml  Cargo.toml  README.md  note
p03-examples/anchor-escrow-with-litesvm/idls/: anchor_escrow.json
p03-examples/anchor-escrow-with-litesvm/programs/anchor_escrow/: Cargo.toml
p03-examples/anchor-escrow-with-litesvm/programs/anchor_escrow/src/: errors.rs  lib.rs  state.rs
p03-examples/anchor-escrow-with-litesvm/programs/anchor_escrow/src/instructions/: make.rs  refund.rs  take.rs
p03-examples/anchor-escrow-with-litesvm/tests/: anchor-litesvm-helper-tests.rs  basic-litesvm-tests.rs
p03-examples/cargo-example/: Cargo.toml  note
p03-examples/cargo-example/tests/: cpi_test.rs  error_test.rs  pda_test.rs  program_test.rs  spl_token_test.rs  time_test.rs  transfer_test.rs
p04-litesvm-utils/: note
p04-litesvm-utils/utils-example/: Cargo.toml
p04-litesvm-utils/utils-example/tests/: test_complete_setup.rs  test_comprehensive_assertions.rs  test_transaction_workflow.rs  test_with_utils.rs
p05-litesvm-token/: note
p05-litesvm-token/token-example/: Cargo.toml
p05-litesvm-token/token-example/tests/: test_create_and_mint_token.rs  test_create_mint.rs  test_mint_tokens.rs
p06-litesvm-loader/: note
p06-litesvm-loader/loader-example/: Cargo.toml
p06-litesvm-loader/loader-example/src/: lib.rs
p06-litesvm-loader/loader-example/tests/: test_upgradeable_deployment.rs
p07-anchor-litesvm/anchor-litesvm-example/: Anchor.toml  note
p07-anchor-litesvm/anchor-litesvm-example/programs/anchor-litesvm-example/: Cargo.toml
p07-anchor-litesvm/anchor-litesvm-example/programs/anchor-litesvm-example/idls/: anchor_litesvm_example.json
p07-anchor-litesvm/anchor-litesvm-example/programs/anchor-litesvm-example/src/: lib.rs
p07-anchor-litesvm/anchor-litesvm-example/programs/anchor-litesvm-example/src/instructions/: initialize.rs
p07-anchor-litesvm/anchor-litesvm-example/programs/anchor-litesvm-example/tests/: test_anchor_program.rs
p08-litesvm-ts/: package.json
p08-litesvm-ts/examples/: account_setup.ts  accounts_setup.ts  basic_clock_manipulation.ts  epoch_schedule.ts  manual_clock_manipulation.ts  note  program_data_account_setup.ts  sol_transfer.ts  time_lock.ts
p08-litesvm-ts/get-started/: note  quick_start.ts  send_transaction.ts  svm_rpc.ts  use_rpc.ts  use_svm.ts
p08-litesvm-ts/tokens/: create_mint.ts  mint_token.ts  note  transfer_token.ts  verify_balance.ts
