[workspace]
members = [
    "programs/*",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[profile.release]
overflow-checks = true

[package]
name = "anchor-escrow-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "basic-litesvm-tests"
path = "tests/basic-litesvm-tests.rs"

[[test]]
name = "anchor-litesvm-helper-tests"
path = "tests/anchor-litesvm-helper-tests.rs"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("idl-build"))'] }

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }

[dev-dependencies]
litesvm = "0.11.0"
litesvm-token = "0.11.0"
anchor-litesvm = "0.4.0"
litesvm-utils = "0.4.0"
solana-sdk = "3.0"
spl-associated-token-account = "8.0"
sha2 = "0.10"
hex = "0.4"
