[package]
name = "cargo-example"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
litesvm = "0.13.0"
litesvm-token = "0.13.0"
solana-account = "3.1.0"
solana-sdk = "4.0.1"
solana-system-interface = "3.1.0"
solana-transaction = "3.1.0"
solana-transaction-error = "3.1.0"
spl-token = "9.0.0"
