[package]
name = "loader-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "4.0.0"

[dev-dependencies]
litesvm = "0.13.0"
litesvm-loader = "0.13.0"
solana-instruction = "3.1.0"
solana-keypair = "3.1.2"
solana-message = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
